5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1635_2703.log
== SUBMITION (2019-04-10 12:18:27) 
-- CODE:
idade = int(input("idade: "))
if (idade >= 18):
	mensagem: "eleitor"
else: 
	mensagem:"nao_eleitor"
print(mensagem)
-- EXECUTION TIME:
0.291997
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    mensagem: "eleitor"
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:18:43) 
-- CODE:
idade = int(input("idade: "))
if (idade >= 18):
	mensagem: "eleitor"
else: 
	mensagem:"nao_eleitor"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:20:42) 
-- CODE:
idade = int(input("idade: "))
if (idade >= 18):
	mensagem = "eleitor"
else: 
	mensagem = "nao_eleitor"
print(mensagem)
-- EXECUTION TIME:
0.17561
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
